src/test/ui/did_you_mean/issue-39802-show-5-trait-impls.stderr
error[E0277]: the trait bound `i8: Foo<i32>` is not satisfied
  --> $DIR/issue-39802-show-5-trait-impls.rs:24:21
   |
LL |     Foo::<i32>::bar(&1i8);
   |     --------------- ^^^^ the trait `Foo<i32>` is not implemented for `i8`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <i8 as Foo<bool>>
             <i8 as Foo<u16>>
             <i8 as Foo<u32>>
             <i8 as Foo<u64>>
           and 5 others

error[E0277]: the trait bound `u8: Foo<i32>` is not satisfied
  --> $DIR/issue-39802-show-5-trait-impls.rs:25:21
   |
LL |     Foo::<i32>::bar(&1u8);
   |     --------------- ^^^^ the trait `Foo<i32>` is not implemented for `u8`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <u8 as Foo<bool>>
             <u8 as Foo<u16>>
             <u8 as Foo<u32>>
             <u8 as Foo<u64>>
           and 5 others

error[E0277]: the trait bound `bool: Foo<i32>` is not satisfied
  --> $DIR/issue-39802-show-5-trait-impls.rs:26:21
   |
LL |     Foo::<i32>::bar(&true);
   |     --------------- ^^^^^ the trait `Foo<i32>` is not implemented for `bool`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <bool as Foo<bool>>
             <bool as Foo<i8>>
             <bool as Foo<u16>>
             <bool as Foo<u32>>
           and 2 others

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
